Adicionando calculadora de IMC e Calculadora OO

--- a/cadastro-cliente/cadastro.html
+++ b/cadastro-cliente/cadastro.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav id="menu">
-        <img src="img/close.svg" alt="fechar menu" class="btn-menu-fechar" onclick="fecharMenu()">
+        <img src="img/close.svg" alt="fechar menu" class="btn-menu-fechar" onclick="fecharMenu()" id="imgFechar">
         <h1>Menu</h1>
 
         <ul>
@@ -35,9 +35,9 @@
         </ul>
     </nav>
 
-    <main>
+    <main id="main">
 
-        <img src="img/menu.svg" alt="menu" class="btn-menu-abrir" onclick="abrirMenu()">
+        <img src="img/menu.svg" alt="menu" class="btn-menu-abrir" onclick="abrirMenu()" id="imgMenu">
 
         <div class="mensagens">
             <img src="img/close.svg" alt="fechar mensagem" onclick="fecharMensagem()">
