--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -7,7 +7,7 @@
     </title>
 
     <link rel="stylesheet" href="css/estilo.css">
-    <script src="js/script.js"></script>
+    <script src="js/Calculadora.js"></script>
 
 
 </head>
@@ -26,10 +26,11 @@
         </div>
 
         <div>
-            <button class="botao" type="button" onclick="somar()">+</button>
-            <button class="botao" type="button" onclick="subtrair()">-</button>
-            <button class="botao" type="button" onclick="multiplicar()">*</button>
-            <button class="botao" type="button" onclick="dividir()">/</button>
+            <button class="botao" type="button" onclick="calc.somar()">+</button>
+            <button class="botao" type="button" onclick="calc.subtrair()">-</button>
+            <button class="botao" type="button" onclick="calc.multiplicar()">*</button>
+            <button class="botao" type="button" onclick="calc.dividir()">/</button>
+            <button class="botao" type="button" onclick="calc.porcentagem()">%</button>
         </div>
     </div>
 
