--- a/2 - cadastro-cliente/cadastro.html
+++ b/2 - cadastro-cliente/cadastro.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="js/script.js"></script>
+    <script src="js/Validador.js"></script>
 </head>
 
 <body>
@@ -106,7 +107,7 @@
             </div>
 
             <div class="divCenter">
-                <button>Salvar</button>
+                <button type="button" onclick="validador.validar()">Salvar</button>
             </div>
 
         </form>
