--- a/8 - ListaConvidados/v2/lista.html
+++ b/8 - ListaConvidados/v2/lista.html
@@ -23,7 +23,7 @@
         <div class="card">
             <h2 class="card-title">Lista de Convidados</h2>
 
-            <span id="lista"></span>
+            <ul id="lista"></ul>
         </div>
 
     </body>
