--- a/8 - ListaConvidados/v3/lista.html
+++ b/8 - ListaConvidados/v3/lista.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="card-acoes">
-                <button type="button" onclick="lista.adicionar()">Adicionar</button>
+                <button type="button" onclick="lista.salvar()">Adicionar</button>
             </div>
         </div>
 
