Finalizando Busca e Inserção cm API e Desafio Final

--- a/8 - ListaConvidados/v5/lista.html
+++ b/8 - ListaConvidados/v5/lista.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/estilo.css">
     </head>
 
-    <body>
+    <body onload="lista.buscarConvidados()">
 
         <div class="card">
             <h2 class="card-title">Adicionar Convidado</h2>
@@ -29,6 +29,7 @@
 
             <div class="card-acoes">
                 <button type="button" onclick="lista.salvar()">Salvar</button>
+                <button type="button" onclick="lista.inserirConvidadoAPI()">Salvar na API</button>
             </div>
         </div>
 
